--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Database (H2) -->
-        <!--    <dependency>
-              <groupId>com.h2database</groupId>
-              <artifactId>h2</artifactId>
-            </dependency>-->
-
         <!-- DataSource (HikariCP) -->
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -73,9 +67,19 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
-
     </dependencies>
+
     <build>
         <finalName>exception</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.3-SNAPSHOT</version>
+                <configuration>
+                    <port>8181</port>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
